--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.10.24",
+    "version": "1.10.26-dev",
     "name": "datatables.net/datatables.net-bs5",
     "description": "DataTables is a plug-in for the jQuery Javascript library. It is a highly flexible tool, based upon the foundations of progressive enhancement, which will add advanced interaction controls to any HTML table. This is DataTables with styling for [Bootstrap5](https://getbootstrap.com/)",
     "support": {
@@ -26,7 +26,7 @@
         "table"
     ],
     "require": {
-        "datatables.net/datatables.net": ">=1.10.24",
+        "datatables.net/datatables.net": ">=1.10.26-dev",
         "twbs/bootstrap": "5.*"
     }
 }
