--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/dataTables.bootstrap5.js",
     "module": "js/dataTables.bootstrap5.mjs",
     "style": "css/dataTables.bootstrap5.css",
-    "types": "./types/dataTables.bootstrap5.d.ts",
+    "types": "./types/types.d.ts",
     "version": "1.12.1",
     "files": [
         "css/**/*.css",
